--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -4,7 +4,8 @@
 		<title>Login</title>
 	</head>
 	<body>
-		<form method="post">		
+		<form method="post">
+		    {% csrf_token %}		
 			{{ form.username }}
 			{{ form.password }}			
 			<input type="submit" value="Login">				
